# polymer

./: .env  .gitignore  Dockerfile  README.md  Taskfile.yml  build.sh  docker-compose.yaml  logging.yaml  pyproject.toml  run.sh
.github/workflows/: build_api.yaml  build_web.yaml
alembic/: env.py
alembic/versions/: 027e32814456_add_downloaded_at_to_downloads.py  af65a1990f8a_add_mmf_token_table.py  d4bcebf28361_initial_alembic_revision.py  eaa25c96f050_fix_downloaded_at_field_casing.py
mywebapp/: .gitignore  package.json  pnpm-lock.yaml
mywebapp/app/: api.d.ts  client.ts  root.tsx
mywebapp/app/components/: ActivityCard.tsx  InfiniteScroll.tsx  icons.tsx
mywebapp/app/hooks/: queries.ts
mywebapp/app/routes/: _index.tsx  activity.$id.tsx  activity.tsx  models.tsx  status.tsx
mywebapp/stories/: Button.stories.ts
src/: scrape.py
src/polymer/: actor.py  api.py  app.py  config.py  cults.graphql  cults_client.py  graveyard.py  ingester.py  lifespan.py  models.py  orm.py  pydantic.py  scrape.py  scraper.py
src/polymer/components/: actor.py  ingester.py  scraper.py
src/polymer/connectors/: cults.graphql  cults_client.py  cults_models.py  db.py
src/polymer/orms/: __init__.py  _base.py  asset.py  category.py  download.py  illustration.py  mmf.py  tag.py  user.py
webapp/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
webapp/src/app/: layout.tsx  page.tsx
webapp/src/components/: AdminApp.tsx
