[tool.poetry]
name = "tmp"
version = "0.1.0"
description = ""
authors = ["Tristan Sweeney <sweeneytri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
rich = "^13.5.2"
typer = "^0.9.0"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
types-beautifulsoup4 = "^4.12.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
