[tool.poetry]
name = "polymer"
version = "0.1.0"
description = ""
authors = ["Tristan Sweeney <sweeneytri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
rich = "^13.5.2"
httpx = "^0.24.1"
sqlalchemy = "^2.0.20"
fastapi = {extras = ["all"], version = "^0.103.0"}
pydantic-settings = "^2.0.3"
pydantic = "^2.3.0"
aiocron = "^1.8"
aiometer = "^0.4.0"
pyrfc6266 = "^1.0.2"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
types-beautifulsoup4 = "^4.12.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
